--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,5 +1,11 @@
 {
   "PUBLIC": {
+    "LAYOUT": {
+      "TITLE_LOGIN": "Login",
+      "TITLE_CHANGE_PASSWORD": "Change password",
+      "TAB_LOGIN": "Login",
+      "TAB_CHANGE_PASSWORD": "Change password"
+    },
     "LOGIN": {
       "TEXT_USERNAME": "Username",
       "TEXT_PASSWORD": "Password",
