#-: Fix token refresh issue

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -93,6 +93,9 @@
       "MODAL_DELETE": {
         "TEXT_TITLE": "Delete user group?"
       }
+    },
+    "PROFILE": {
+      "BUTTON_LOGOUT": "Logout"
     }
   },
   "SHARED": {
