--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -18,6 +18,7 @@
       "LINK_USER_GROUPS": "User groups",
       "LINK_SOMETHING": "Something",
       "BUTTON_NEW_USER": "New user",
+      "LINK_LOGIN_AS_USER": "Login as User",
       "BUTTON_NEW_USER_GROUP": "New user group"
     },
     "USERS": {
