--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -146,6 +146,24 @@
       },
       "ACTIONS": {
         "TEXT_REPORT": "Report"
+      },
+      "REPORT": {
+        "TITLE_PATIENT_DATA": "Patient Data",
+        "TEXT_PATIENT_NAME": "Patient Name",
+        "TEXT_ORDERED_BY": "Ordered By",
+        "TEXT_DATE_OF_BIRTH": "Date of Birth",
+        "TEXT_SAMPLE_COLLECTION_DATE": "Sample Collection Date",
+        "TEXT_GENDER": "Gender",
+        "TEXT_SAMPLE_ACCESSION_DATE": "Sample Accession Date",
+        "TEXT_SAMPLE_TYPE": "Sample Type",
+        "TEXT_REPORT_DATE": "Report Date",
+        "TEXT_SAMPLE_ID": "Sample ID/MRN",
+        "TEXT_TEST_ACCESSION": "Test Accession",
+        "TEXT_TEST_ORDERED": "Test Ordered",
+        "TEXT_TEST_CODE": "Test Code",
+        "TITLE_RESULT_POSITIVE": "Result Positive",
+        "TITLE_LITERATURE": "Literature",
+        "TITLE_ADDITIONAL_COMMENTS": "Additional Comments"
       }
     },
     "PROFILE": {
